# kraven

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
src/: completions.rs  config.rs  main.rs  profile.rs
src/commands/: activate.rs  completions.rs  current.rs  deactivate.rs  edit.rs  list.rs  mod.rs  remove.rs  show.rs
